feat: add initial documentation structure and core feature pages

--- a/index.mdx
+++ b/index.mdx
@@ -1,71 +1,120 @@
 ---
-title: Introduction
-description: "Welcome to the home of your new documentation"
+title: Prezence AI Documentation
+description: "Unlimited customizable AI-powered LinkedIn automation for personalized lead generation at scale"
 ---
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
+  src="/logo/Logo gradient SVG.svg"
+  alt="Prezence AI Logo"
+  style={{ maxWidth: '400px', margin: '0 auto' }}
 />
 <img
   className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
+  src="/logo/Logo gradient Magnolia White SVG 1600x400.svg"
+  alt="Prezence AI Logo"
+  style={{ maxWidth: '400px', margin: '0 auto' }}
 />
 
-## Setting up
+## Welcome to Prezence AI
 
-The first step to world-class documentation is setting up your editing environments.
+Prezence AI is a powerful LinkedIn lead generation platform that combines advanced conversation management with unlimited customizable AI automation. Our platform enables you to create unique AI agents tailored to specific offers, ideal customer profiles, and sales processes, allowing you to scale personalized outreach like never before.
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    title="Quick Start Guide"
+    icon="rocket"
+    href="/quickstart"
   >
-    Get your docs set up locally for easy development
+    Get up and running with Prezence AI in minutes
   </Card>
   <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
+    title="Core Features"
+    icon="star"
+    href="/core-features/conversation-management"
   >
-    Preview your changes before you push to make sure they're perfect
+    Explore the powerful capabilities of Prezence AI
   </Card>
 </CardGroup>
 
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
+## Key Features
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    title="Advanced Conversation Management"
+    icon="comments"
+    href="/core-features/conversation-management"
   >
-    Customize your docs to your company's colors and brands
+    Replace LinkedIn's basic messaging with custom views, lead segmentation, notes, reminders, and instant profile access
   </Card>
   <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    title="Unlimited Customizable AI Agents"
+    icon="robot"
+    href="/core-features/ai-agents"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Create unique AI agents for any offer, ICP, or sales process with custom pipeline stages and labels
   </Card>
   <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
+    title="Custom Pipeline Management"
+    icon="diagram-project"
+    href="/core-features/pipeline-customization"
   >
-    Build interactive features and designs to guide your users
+    Design unlimited pipeline stages with custom labels to match any sales process
   </Card>
   <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
+    title="Automated Lead Magnet Delivery"
+    icon="gift"
+    href="/core-features/lead-magnets"
   >
-    Check out our showcase of our favorite documentation
+    Automatically deliver lead magnets when users engage with your LinkedIn content
+  </Card>
+  <Card
+    title="AI-Powered Lead Scoring"
+    icon="chart-simple"
+    href="/core-features/lead-scoring"
+  >
+    Intelligently score and qualify leads based on their LinkedIn profiles and engagement
+  </Card>
+  <Card
+    title="Multi-Provider AI Integration"
+    icon="brain"
+    href="/api-reference/integration/ai-providers"
+  >
+    Leverage 7 different LLM providers for optimal performance and redundancy
+  </Card>
+</CardGroup>
+
+## Use Cases
+
+Prezence AI is designed to help various professionals and businesses optimize their LinkedIn lead generation:
+
+<CardGroup cols={2}>
+  <Card
+    title="Marketing Agencies"
+    icon="bullhorn"
+    href="/use-cases/marketing-agencies"
+  >
+    Scale client lead generation with customized AI agents for each client's unique needs
+  </Card>
+  <Card
+    title="Sales Teams"
+    icon="handshake"
+    href="/use-cases/sales-teams"
+  >
+    Empower your team with intelligent automation and advanced conversation management
+  </Card>
+  <Card
+    title="Consultants"
+    icon="briefcase"
+    href="/use-cases/consultants"
+  >
+    Generate high-quality leads while focusing on delivering value to clients
+  </Card>
+  <Card
+    title="SaaS Companies"
+    icon="cloud"
+    href="/use-cases/saas-companies"
+  >
+    Create customized pipelines for different product offerings and customer segments
   </Card>
 </CardGroup>
