docs: add video tutorials and detailed guides for lead management and settings

--- a/user-guides/automation-campaigns/lead-magnets.mdx
+++ b/user-guides/automation-campaigns/lead-magnets.mdx
@@ -40,3 +40,31 @@ This saves you countless hours of manually tracking comments and sending DMs.
 </Card>
 
 By using lead magnets, you can consistently turn your content marketing efforts into tangible, qualified leads. Next, learn how to monitor comments more broadly with [Comment Monitoring](/user-guides/automation-campaigns/comment-monitoring).
+
+## Video Tutorial: Setting Up Lead Magnet Automation
+
+<video src="https://www.loom.com/embed/b40626e5e14440f9ae942b61d894817a" />
+
+### Step-by-Step Guide
+
+1. **Access Your Posts**: Navigate to the Content section where you'll see your LinkedIn posts. Use the "Refresh Posts" button if needed.
+
+2. **Configure Your Lead Magnet**:
+   - Click "View and Edit Settings" on your post
+   - Set up a trigger phrase (what commenters should type to receive your lead magnet)
+   - Add a lead magnet by selecting an existing one or creating a new one
+   - For new lead magnets, provide a name, description, and URL
+
+3. **Set Up Message Templates**:
+   - Configure what message will be sent to connected leads requesting your content
+   - Set up a comment reply for users who aren't connected yet
+   - The system will automatically add a "Check your inbox" confirmation comment
+
+4. **Automation Features**:
+   - The system queues all commenters requesting your lead magnet
+   - Prioritizes leads based on your ICP (Ideal Customer Profile)
+   - Spaces out messages to stay within LinkedIn limits (30 seconds to 2 minutes apart)
+   - Tracks who has requested which lead magnets
+   - Automatically follows up when non-connections accept your connection request
+
+Once set up, the lead magnet automation runs continuously, helping you capture and nurture leads without manual intervention.
