--- a/user-guides/lead-management/importing-leads.mdx
+++ b/user-guides/lead-management/importing-leads.mdx
@@ -22,9 +22,46 @@ The most powerful way to import leads is by using **Search Campaigns**. This fea
 
 Have you already run a search on LinkedIn and have a list of people you want to import? You can simply paste the LinkedIn search URL into Prezence AI.
 
-1.  **Perform a Search on LinkedIn**: Go to LinkedIn and run a search for the people you want to import.
-2.  **Copy the URL**: Copy the entire URL from your browser's address bar.
-3.  **Import in Prezence AI**: In the Leads Dashboard, click the **"Import Leads"** button and select "Import from URL". Paste the URL and Prezence AI will import the profiles from that search result page.
+<video src="https://www.loom.com/embed/4c76bcc7add643d6b5b6fa8d3ff4c5cf" />
+
+### Step-by-Step Guide
+
+1. **Identify Your Target Audience**:
+   - Determine the job titles or roles that match your ICP
+   - Consider using AI tools like Claude to generate a comprehensive list of relevant job titles
+
+2. **Create Labels for Organization**:
+   - Before importing leads, create labels in Settings to categorize your leads
+   - These labels will help you organize and filter your leads later
+
+3. **Perform a Search on LinkedIn**:
+   - Go to LinkedIn and search for your target job titles
+   - Use the "1st" filter to find people you're already connected with
+   - You can further refine by location or other criteria using "All Filters"
+
+4. **Copy the Search URL**:
+   - After running your search, copy the entire URL from your browser's address bar
+
+5. **Import in Prezence AI**:
+   - In Prezence AI, go to the Searches section
+   - Click "Add Search"
+   - Name your search (e.g., "SDR Demo")
+   - Paste the LinkedIn search URL
+   - Select the appropriate label for these leads
+   - Click "Save"
+
+6. **Working with Imported Leads**:
+   - After a few hours, your leads will appear in the "New Leads" section
+   - You can filter by connection tier:
+     - Tier 1: Already connected (ready to message)
+     - Tier 2/3: Not connected (need to send connection requests first)
+   - Select leads and use "Send Invitation" to queue connection requests
+   - Connection requests are sent gradually (every 30 seconds to 2 minutes) to stay within LinkedIn limits
+
+7. **Creating Custom Views**:
+   - Filter your leads by connection status, labels, or other criteria
+   - Save these filters as custom views for quick access
+   - Use these views to efficiently work through your outreach process
 
 ## Method 3: Manual Lead Creation
 
