--- a/user-guides/lead-management/managing-pipeline-stages.mdx
+++ b/user-guides/lead-management/managing-pipeline-stages.mdx
@@ -53,3 +53,27 @@ To tailor the pipeline to your needs, you can add, edit, reorder, or delete stag
 </Card>
 
 Once your pipeline is customized, the next step is to understand how to prioritize your leads with [Lead Scoring](/user-guides/lead-management/lead-scoring).
+
+## Video Tutorial: Setting Up Pipeline Stages and Labels
+
+<video src="https://www.loom.com/embed/eb57ee85b1b9418a98fd8dbb1c132da5" />
+
+### Key Points from the Video
+
+1. **Pipeline Stages vs. Labels**:
+   - Pipeline stages track where leads are in your sales process (e.g., new lead, meeting booked, closed, lost)
+   - Labels help segment your leads in unlimited ways (e.g., by position, company type, product interest)
+
+2. **Customizing Pipeline Stages**:
+   - Navigate to Settings > Pipeline Stages
+   - Create custom stages that match your specific sales workflow
+   - Use these to track progression through your sales funnel
+
+3. **Creating and Using Labels**:
+   - Create as many labels as needed for your segmentation strategy
+   - Customize label colors for better visual organization
+   - Use labels alongside pipeline stages for granular lead management
+
+4. **Future Features**:
+   - Custom views combining pipeline stages and labels
+   - More detailed filtering and segmentation options
