--- a/user-guides/settings-administration/llm-configuration.mdx
+++ b/user-guides/settings-administration/llm-configuration.mdx
@@ -21,3 +21,33 @@ Prezence AI leverages the power of Large Language Models (LLMs) for features lik
 <Warning>
   Your API keys are stored securely and encrypted. Never share your API keys publicly.
 </Warning>
+
+## Video Tutorial: Setting Up LLM Configuration
+
+<video src="https://www.loom.com/embed/eb57ee85b1b9418a98fd8dbb1c132da5" />
+
+### Cost-Effective LLM Options
+
+The video demonstrates how to set up your LLM configuration with a focus on cost-effectiveness:
+
+1. **Available LLM Providers**:
+   - OpenAI
+   - Anthropic
+   - Open Router (recommended for cost efficiency)
+
+2. **Why Choose Open Router**:
+   - Access to multiple models (including Anthropic, Claude, etc.) through a single API
+   - Pay-as-you-go pricing with minimal markup (approximately 6%)
+   - Access to more affordable models like Maverick/Llama
+
+3. **Cost Examples**:
+   - Using cost-effective models can keep expenses very low (e.g., less than $1/week with regular usage)
+   - Pricing comparison: Maverick costs approximately 15¢ per million input tokens and 60¢ per million output tokens
+   - More expensive models like Claude might cost roughly 10x more
+
+4. **Getting Started**:
+   - Create an account with your preferred provider
+   - Generate an API key
+   - Add the key to your Prezence AI settings
+
+This configuration allows Prezence AI to use your preferred LLM for lead scoring, message generation, and other AI-powered features.
