--- a/user-guides/account-setup/connecting-linkedin.mdx
+++ b/user-guides/account-setup/connecting-linkedin.mdx
@@ -42,4 +42,16 @@ If you encounter any problems while connecting your account, here are a few thin
 
 Once your account is connected, you're ready to start defining your [Ideal Customer Profile (ICP)](/user-guides/account-setup/ideal-customer-profile) to begin qualifying leads.
 
-<video src="https://www.loom.com/embed/your-video-id-here" />
+<video src="https://www.loom.com/embed/f9956347bb0644e8b5887391d8903598" />
+
+### Video Walkthrough
+
+This video demonstrates how to connect your LinkedIn account and configure your account settings:
+
+1. Navigate to Admin > Account Management
+2. Log in with your LinkedIn username and password
+3. Review the default limits (daily messages, profile views, comments)
+4. Verify your ICP (Ideal Customer Profile) settings
+5. Save your configuration
+
+Once completed, your LinkedIn account will show as "Connected" and you'll be ready to proceed with the next steps.
