fix: replace video tags with responsive iframes and update social media links

--- a/user-guides/account-setup/connecting-linkedin.mdx
+++ b/user-guides/account-setup/connecting-linkedin.mdx
@@ -42,7 +42,13 @@ If you encounter any problems while connecting your account, here are a few thin
 
 Once your account is connected, you're ready to start defining your [Ideal Customer Profile (ICP)](/user-guides/account-setup/ideal-customer-profile) to begin qualifying leads.
 
-<video src="https://www.loom.com/embed/f9956347bb0644e8b5887391d8903598" />
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://www.loom.com/embed/f9956347bb0644e8b5887391d8903598"
+  title="Connecting LinkedIn Account Video Tutorial"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
 
 ### Video Walkthrough
 
