--- a/user-guides/automation-campaigns/lead-magnets.mdx
+++ b/user-guides/automation-campaigns/lead-magnets.mdx
@@ -43,7 +43,13 @@ By using lead magnets, you can consistently turn your content marketing efforts 
 
 ## Video Tutorial: Setting Up Lead Magnet Automation
 
-<video src="https://www.loom.com/embed/b40626e5e14440f9ae942b61d894817a" />
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://www.loom.com/embed/b40626e5e14440f9ae942b61d894817a"
+  title="Setting Up Lead Magnet Automation Video Tutorial"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
 
 ### Step-by-Step Guide
 
