--- a/user-guides/lead-management/importing-leads.mdx
+++ b/user-guides/lead-management/importing-leads.mdx
@@ -22,7 +22,13 @@ The most powerful way to import leads is by using **Search Campaigns**. This fea
 
 Have you already run a search on LinkedIn and have a list of people you want to import? You can simply paste the LinkedIn search URL into Prezence AI.
 
-<video src="https://www.loom.com/embed/4c76bcc7add643d6b5b6fa8d3ff4c5cf" />
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://www.loom.com/embed/4c76bcc7add643d6b5b6fa8d3ff4c5cf"
+  title="Importing Leads from LinkedIn Search Video Tutorial"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
 
 ### Step-by-Step Guide
 
