--- a/user-guides/lead-management/managing-pipeline-stages.mdx
+++ b/user-guides/lead-management/managing-pipeline-stages.mdx
@@ -56,7 +56,13 @@ Once your pipeline is customized, the next step is to understand how to prioriti
 
 ## Video Tutorial: Setting Up Pipeline Stages and Labels
 
-<video src="https://www.loom.com/embed/eb57ee85b1b9418a98fd8dbb1c132da5" />
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://www.loom.com/embed/eb57ee85b1b9418a98fd8dbb1c132da5"
+  title="Setting Up Pipeline Stages and Labels Video Tutorial"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
 
 ### Key Points from the Video
 
