--- a/user-guides/settings-administration/llm-configuration.mdx
+++ b/user-guides/settings-administration/llm-configuration.mdx
@@ -24,7 +24,13 @@ Prezence AI leverages the power of Large Language Models (LLMs) for features lik
 
 ## Video Tutorial: Setting Up LLM Configuration
 
-<video src="https://www.loom.com/embed/eb57ee85b1b9418a98fd8dbb1c132da5" />
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://www.loom.com/embed/eb57ee85b1b9418a98fd8dbb1c132da5"
+  title="Setting Up LLM Configuration Video Tutorial"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
 
 ### Cost-Effective LLM Options
 
