refactor: replace video tags with styled iframes for better video embedding

--- a/introduction/getting-started.mdx
+++ b/introduction/getting-started.mdx
@@ -43,4 +43,10 @@ Now you're all set! Head back to the main dashboard to see your leads start to c
 
 That's it! You're ready to start using Prezence AI to supercharge your lead generation. If you want a more visual guide, check out our Getting Started video tutorial.
 
-<video src="https://www.loom.com/embed/your-video-id-here" />
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://www.loom.com/embed/your-video-id-here"
+  title="Getting Started with Prezence AI Video Tutorial"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
