--- a/user-guides/lead-management/lead-scoring.mdx
+++ b/user-guides/lead-management/lead-scoring.mdx
@@ -47,7 +47,13 @@ By leveraging automated lead scoring, you can move away from guessing and start 
 
 ## Video Tutorial: Setting Up AI Lead Scoring Agent
 
-<video src="https://www.loom.com/embed/03e143483ba444de88a02fc587386bd6" />
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://www.loom.com/embed/03e143483ba444de88a02fc587386bd6"
+  title="Setting Up AI Lead Scoring Agent Video Tutorial"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
 
 ### How to Configure Your Lead Scoring Agent
 
