--- a/video-tutorials/video-library.mdx
+++ b/video-tutorials/video-library.mdx
@@ -7,14 +7,32 @@ Welcome to the Prezence AI Video Library! Sometimes it's easier to see something
 
 ## Getting Started
 
-<video src="https://www.loom.com/embed/your-getting-started-video-id" />
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://www.loom.com/embed/your-getting-started-video-id"
+  title="Getting Started with Prezence AI"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
 
 ## Lead Management
 
-<video src="https://www.loom.com/embed/your-lead-dashboard-video-id" />
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://www.loom.com/embed/your-lead-dashboard-video-id"
+  title="Lead Management Dashboard Tutorial"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
 
 ## Automation & Campaigns
 
-<video src="https://www.loom.com/embed/your-lead-magnets-video-id" />
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://www.loom.com/embed/your-lead-magnets-video-id"
+  title="Automation and Campaigns Tutorial"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
 
 *More videos coming soon!*
