feat: expand video library with new tutorials for lead management, automation, and conversations

--- a/video-tutorials/video-library.mdx
+++ b/video-tutorials/video-library.mdx
@@ -5,34 +5,80 @@ description: A complete collection of video tutorials to help you master Prezenc
 
 Welcome to the Prezence AI Video Library! Sometimes it's easier to see something done than to read about it. Here you'll find a collection of short, focused video tutorials to help you get the most out of every feature.
 
-## Getting Started
+## Account Setup
+
+### Connecting Your LinkedIn Account
 
 <iframe
   className="w-full aspect-video rounded-xl"
   src="https://www.loom.com/embed/f9956347bb0644e8b5887391d8903598"
-  title="Getting Started with Prezence AI"
+  title="Connecting Your LinkedIn Account"
   frameBorder="0"
   allowFullScreen
 ></iframe>
 
 ## Lead Management
 
+### Importing Leads
+
 <iframe
   className="w-full aspect-video rounded-xl"
   src="https://www.loom.com/embed/4c76bcc7add643d6b5b6fa8d3ff4c5cf"
-  title="Lead Management Dashboard Tutorial"
+  title="Importing Leads Tutorial"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
+
+### Managing Pipeline Stages and Labels
+
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://www.loom.com/embed/eb57ee85b1b9418a98fd8dbb1c132da5"
+  title="Setting Up Pipeline Stages and Labels"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
+
+### AI Lead Scoring
+
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://www.loom.com/embed/03e143483ba444de88a02fc587386bd6"
+  title="Setting Up AI Lead Scoring Agent"
   frameBorder="0"
   allowFullScreen
 ></iframe>
 
 ## Automation & Campaigns
 
+### Lead Magnet Automation
+
 <iframe
   className="w-full aspect-video rounded-xl"
   src="https://www.loom.com/embed/b40626e5e14440f9ae942b61d894817a"
-  title="Automation and Campaigns Tutorial"
+  title="Setting Up Lead Magnet Automation"
   frameBorder="0"
   allowFullScreen
 ></iframe>
 
-*More videos coming soon!*
+## Engagement & Conversations
+
+### Custom Views and AI Agents
+
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://www.loom.com/embed/38fd1c878987415fb806359a33bd8ddd"
+  title="Custom Views and AI Agents Tutorial"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
+
+### Navigating the Conversation Hub
+
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://www.loom.com/embed/888da0e97557432e9a37ea8af442e0a5"
+  title="Navigating the Conversation Hub Tutorial"
+  frameBorder="0"
+  allowFullScreen
+></iframe>
